--- a/package.json
+++ b/package.json
@@ -25,12 +25,18 @@
     "react": "^18.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jsdom": "^21.1.6",
     "@types/react": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jsdom": "^24.0.0",
+    "jsdom-global": "^3.0.2",
     "prettier-eslint-cli": "^8.0.1",
     "typescript": "^5.0.0",
-    "use-future": "^0.0.2"
+    "use-future": "^0.0.3",
+    "vitest": "^1.6.0"
   },
   "files": [
     "dist"
