--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "clean": "rm -rf node_modules dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "format": "prettier -w ."
   },
   "repository": {
@@ -25,12 +25,17 @@
     "react": "^18.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jsdom": "^24.0.0",
     "prettier-eslint-cli": "^8.0.1",
     "typescript": "^5.0.0",
-    "use-future": "^0.0.2"
+    "use-future": "file:../use-future",
+    "vite-plugin-dts": "^3.9.1",
+    "vitest": "^1.6.0"
   },
   "files": [
     "dist"
